force-app/main/default/objects/Drawdown_Payment_Allocation__c/Drawdown_Payment_Allocation__c.object-meta.xml
<CustomObject>
    <description>All Payment allocations to Drawdowns.</description>
    <label>Drawdown Payment Allocation</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drawdown Payment Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>