force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Before_Reporting_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Before_Reporting_To_Date__c</fullName>
    <formula>Transaction_Date__c &lt;= Reporting_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Before Reporting To Date</label>
    <type>Checkbox</type>
</CustomField>