force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Before_Temp_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Before_Temp_Payout_Date__c</fullName>
    <formula>Transaction_Date__c &lt;=Temp_Payout_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates this transaction was recorded before the temp payout date and therefore can be included in the rollup. 
 Used in DLRS for filtering the &quot;*b4 Temp Date&quot; rollups.</inlineHelpText>
    <label>Before Temp Payout Date</label>
    <type>Checkbox</type>
</CustomField>