force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Drawdown__c.field-meta.xml
<CustomField>
    <fullName>Drawdown__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Drawdown that this applies to</inlineHelpText>
    <label>Drawdown</label>
    <referenceTo>Drawdown__c</referenceTo>
    <relationshipLabel>Payments Allocated to this Drawdown</relationshipLabel>
    <relationshipName>Payments_Allocated_to_this_Drawdown</relationshipName>
    <type>Lookup</type>
</CustomField>