force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Interest_Accrued_to_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrued_to_Transaction_Date__c</fullName>
    <inlineHelpText>Interest Accrued to the date of the Payment</inlineHelpText>
    <label>Interest Accrued to Transaction Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>