force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Interest_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_End_Date__c</fullName>
    <inlineHelpText>The date interest was accrued to when this Payment Allocation was created.</inlineHelpText>
    <label>Interest End Date</label>
    <type>Date</type>
</CustomField>