force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Opportunity the parent Drawdown is linked to.   This is required to allow efficient replication down from Opportunity.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Drawdown Payment Allocations</relationshipLabel>
    <relationshipName>Drawdown_Payment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>