force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <inlineHelpText>Payment associated with this Drawdown</inlineHelpText>
    <label>Payment</label>
    <referenceTo>Drawdown__c</referenceTo>
    <relationshipLabel>Drawdowns Allocated to this Payment</relationshipLabel>
    <relationshipName>Drawdowns_Allocated_to_this_Payment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>