force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Payout_Date__c</fullName>
    <inlineHelpText>The Payout Date replicated down from the Opportunity.  It&#39;s required hear for the DLRS to trigger aggregation.</inlineHelpText>
    <label>Payout Date</label>
    <type>Date</type>
</CustomField>