force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Reporting_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_To_Date__c</fullName>
    <label>Reporting To Date</label>
    <type>Date</type>
</CustomField>