force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Temp_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Temp_Payout_Date__c</fullName>
    <inlineHelpText>The Temp Payout Date replicated down from the Opportunity.  It&#39;s required here to allow the DLRS to aggregate up to Drawdown.</inlineHelpText>
    <label>Temp Payout Date</label>
    <type>Date</type>
</CustomField>