force-app/main/default/objects/Drawdown_Payment_Allocation__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <inlineHelpText>Date of Transaction</inlineHelpText>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>