force-app/main/default/objects/Drawdown_Payment_Allocation__c/validationRules/Cannot_Change_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(not(isNew()),isChanged(Payment__c))</errorConditionFormula>
    <errorMessage>Payment Allocation cannot be moved to a different Payment.</errorMessage>
</ValidationRule>