force-app/main/default/objects/Drawdown_Payment_Allocation__c/validationRules/Transaction_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_Date_Required</fullName>
    <active>true</active>
    <description>Just ensuring a basic field is filled.</description>
    <errorConditionFormula>ISBLANK(Transaction_Date__c)</errorConditionFormula>
    <errorMessage>Transaction Date is required</errorMessage>
</ValidationRule>